--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- تغییرات از گیت بر روی گیت هاپ اعمال شد -->
+<!-- تغییرات از گیت هاب  بر روی گیت  اعمال شد -->
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
